[package]
name = "Didactic_Camelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.1"
rand = "0.8.4" # Para numeros y ratios aleatorios
colored = "2.0.0" # Para darle color a los String
